sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:13: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var T:Array[Int]
      ^AlgInsertionSort:18: error: not found: value v
  v=T(i)
  ^AlgInsertionSort:19: error: not found: value v
  	while(j>0 && T(j-1)>v)
                            ^AlgInsertionSort:24: error: not found: value x
  	T(j)=x
             ^